--- a/style.css
+++ b/style.css
@@ -3,6 +3,21 @@
     padding: 0;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.settings{
+    margin: 50px auto;
+    text-align: center;
+}
+
+#color-picker-container{
+    margin: 30px auto;
+}
 .grid{
     display: flex;
     flex-direction: column;
@@ -17,6 +32,6 @@
 }
 
 .cell{
-    border: 1px solid black !important;
+    border: 1px solid black;
     box-sizing: border-box;
 }
